Fix dark mode default primary

--- a/frontend/app/styles/_variables.scss
+++ b/frontend/app/styles/_variables.scss
@@ -91,8 +91,8 @@ $primary-dark: color.adjust(#6024ec, $lightness: -10%);
 
 .dark-mode {
 
-	--default: #3956e7e8;
-	--default-bg: #966afc31;
+	--default: #3956e7;
+	--default-bg: #2b304e;
 	--default-border: #8e5fff1f;
 
 	--bg-color: #1c2127;
